examples/type_system/failing/149_cross_module_constructor_access_strict.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/149_cross_module_constructor_access_strict.flx
// error[E421]: Unknown Member in Exposing
//
// `print` is not defined in module `Flow.Primops`.
//
//   examples/type_system/failing/149_cross_module_constructor_access_strict.flx:7:1
//   |
// 7 | // `print` is not defined in module `Flow.Primops`.
//   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Check the public members of `Flow.Primops` or remove `print` from the exposing list.
//
//
// error[E004]: Undefined Variable
//
// I can't find a value named `TypeSystem.BoundaryCtor.SomeInt`.
//
//   examples/type_system/failing/149_cross_module_constructor_access_strict.flx:57:14
//    |
// 57 |     let _x = TypeSystem.BoundaryCtor.SomeInt(1)
//    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Define it first: let TypeSystem.BoundaryCtor.SomeInt = ...;
//
//
// • 1 error • examples/type_system/failing/149_cross_module_constructor_access_strict.flx
// error[E018]: Import Not Found
//
// Cannot find module `TypeSystem.BoundaryCtor` to import.
//
//   examples/type_system/failing/149_cross_module_constructor_access_strict.flx:54:1
//    |
// 54 | import TypeSystem.BoundaryCtor
//    | ^
//
// Hint:
//   Check that: 1) The module file exists (e.g., `TypeSystem.BoundaryCtor.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
//   Looked for module `TypeSystem.BoundaryCtor` under roots: examples/type_system/failing, src, lib (imported from examples/type_system/failing/149_cross_module_constructor_access_strict.flx).
//
// Found 3 errors across 2 modules.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004
// expect-error: E018
// expect-error: E421

// E086 (strict): cross-module constructor access is blocked in strict mode.

import TypeSystem.BoundaryCtor

fn main() {
    let _x = TypeSystem.BoundaryCtor.SomeInt(1)
}
